Fix memory-bank audit: 7 new specs, 21 docs aligned with C4 model
Address critical documentation gaps and C4 inconsistencies:
- Add 7 new specs: payout execution (30), overpayment handling (31),
  worker monitoring/DLQ (32), partition automation (33), deal workflow
  engine (35), logging strategy (36), channel statistics (09)
- Fix Java 21→25 references across all docs
- Align service names with C4 model (20+ naming fixes)
- Add Nginx container and blue-green deployment to architecture docs
- Fix Telegram bot: HTML→MarkdownV2, library 7.11→9.3.0
- Add missing users/channels tables and version column to data stores
- Update Redis docs with all 5 component categories
- Expand tech stack with Build & Code Quality section

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>